# VC-PL-TP

./: CMakeLists.txt  README.md  example_code.cpp  launch.json  main.cpp  vc.c  vc.h
CMakeBuild/: CMakeCache.txt  Makefile  cmake_install.cmake
VC-PL-TP/VC-PL-TP/: CodigoExemplo.cpp
